--- a/Mongoli_kiil.mw
+++ b/Mongoli_kiil.mw
@@ -1,3 +1,16 @@
+{{Kiil
+| nimi  = mongoli kiil (''Mongol (Монгол)'')
+| kon kõnõldas  = [[Mongoolia]]n, [[Hiina]]n, [[Kõrgõzstan]]in, [[Vinnemaa]].
+| kõnõlõjidõ arv  = 5 700 000
+| kon om ammõtlinõ = [[Mongoolia]]n
+| kiilkund = mongoli
+| keelerühmäq = hummogu-mongoli
+| iso1  = mn
+| iso2  = mon
+| iso3  = mon
+| sil   = MON
+}}
+
 '''Mongoli kiil''' (ka '''perismongoli kiil''') om [[mongoli keeleq|mongoli keelerühmä]] hummogurühmä kiil, mil om umbõs 5 mill'onia kõnõlõjat, säälhulgan 2 mill'onat [[Mongoolia]]n, 3 mill'onat Põh'a-[[Hiina]]n ni veidemb [[Kõrgõzstan]]in ni [[Burjaatia]]n [[Vinnemaa]]l. Mongoli kiil om Mongoolia riigikiil ni [[Hiina Rahvababariik|Hiina Rahvavabariigi]] [[Sise-Mongoolia]] autonoomilidsõ piirkunna ammõtlinõ kiil. Üts mongoli keele ligembit sugulaskiili om [[burjaadi kiil]], miä om kõnõlõjidõ arvo poolõst tõõnõ kiil [[Tsiber]]in.
 
 [[katõgooria:keeleq]]
