*Empty MediaWiki Message*

--- a/Mongoli_kiil.mw
+++ b/Mongoli_kiil.mw
@@ -11,7 +11,7 @@
 | sil   = MON
 }}
 
-'''Mongoli kiil''' (ka '''perismongoli kiil''') om [[mongoli keeleq|mongoli keelerühmä]] hummogurühmä kiil, mil om umbõs 5 mill'onia kõnõlõjat, säälhulgan 2 mill'onat [[Mongoolia]]n, 3 mill'onat Põh'a-[[Hiina]]n ni veidemb [[Kõrgõstan]]in ni [[Burjaatia]]n [[Vinnemaa]]l. Mongoli kiil om Mongoolia riigikiil ni [[Hiina Rahvababariik|Hiina Rahvavabariigi]] [[Sise-Mongoolia]] autonoomilidsõ piirkunna ammõtlinõ kiil. Üts mongoli keele ligembit sugulaskiili om [[burjaadi kiil]], miä om kõnõlõjidõ arvo poolõst tõõnõ kiil [[Tsiber]]in.
+'''Mongoli kiil''' (ka '''perismongoli kiil''') om [[mongoli keeleq|mongoli keelerühmä]] hummogurühmä kiil, mil om umbõs 5 mill'onia kõnõlõjat, säälhulgan 2 mill'onat [[Mongoolia]]n, 3 mill'onat Põh'a-[[Hiina]]n ni veidemb [[Kõrgõstan]]in ni [[Burjaatia]]n [[Vinnemaa]]l. Mongoli kiil om Mongoolia riigikiil ni [[Hiina Rahvavabariik|Hiina Rahvavabariigi]] [[Sise-Mongoolia]] autonoomilidsõ piirkunna ammõtlinõ kiil. Üts mongoli keele ligembit sugulaskiili om [[burjaadi kiil]], miä om kõnõlõjidõ arvo poolõst tõõnõ kiil [[Tsiber]]in.
 
 [[katõgooria:keeleq]]
 [[katõgooria:Mongoolia]]
