The file [[:Image:Coat_of_Arms_of_Jamaica.svg]] has been replaced by [[:Image:Coat_of_arms_of_Jamaica.svg]] by administrator [[:commons:User:Marcus Cyron]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harmo...

--- a/Jamaica.mw
+++ b/Jamaica.mw
@@ -2,7 +2,7 @@
 Nimi=Jamaica|
 Genitiiv=Jamaica|
 Lipp=Pilt:Flag of Jamaica.svg|
-Vapp=Pilt:Coat of Arms of Jamaica.svg|
+Vapp=Pilt:Coat_of_arms_of_Jamaica.svg|
 Kaart=Pilt:LocationJamaica.svg|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Kingston]]|
