--- a/Kuveit.mw
+++ b/Kuveit.mw
@@ -2,7 +2,7 @@
 Nimi=Kuveit|
 Genitiiv=Kuveidi|
 Lipp=Pilt:Flag of Kuwait.svg|
-Vapp=Pilt:Coat of Arms of Kuwait-2.svg|
+Vapp=Pilt:Coat_of_arms_of_Kuwait.svg|
 Kaart=Pilt:Map of Kuwait.svg|
 Riigikiil=[[araabia kiil]]|
 Pääliin=[[Al-Kuwayt]]|
