The file [[:Image:Coat_of_Arms_of_Lebanon.svg]] has been replaced by [[:Image:Coat_of_arms_of_Lebanon.svg]] by administrator [[:commons:User:Marcus Cyron]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harmo...

--- a/Liibanon.mw
+++ b/Liibanon.mw
@@ -2,7 +2,7 @@
 Nimi=Liibanon|
 Genitiiv=Liibanoni|
 Lipp=Pilt:Flag of Lebanon.svg|
-Vapp=Pilt:Coat of Arms of Lebanon.svg|
+Vapp=Pilt:Coat_of_arms_of_Lebanon.svg|
 Kaart=Pilt:LocationLebanon.svg|
 Riigikiil=[[araabia kiil]]|
 Pääliin=[[Beirut]]|
