--- a/Malawi.mw
+++ b/Malawi.mw
@@ -2,7 +2,7 @@
 Nimi=Malawi|
 Genitiiv=Malawi|
 Lipp=Pilt:Flag of Malawi.svg|
-Vapp=Pilt:Coat of Arms of the Republic of Malawi.svg|
+Vapp=Pilt:Coat_of_arms_of_Malawi.svg|
 Kaart=Pilt:LocationMalawi.svg|
 Riigikiil=[[inglüse kiil]], [[njandža kiil]]|
 Pääliin=[[Lilongwe]]|
