*Empty MediaWiki Message*

--- a/Praha.mw
+++ b/Praha.mw
@@ -3,7 +3,7 @@
 <!--|  umakeeline_nimi_1 = | |-->
 |  pilt = [[Pilt:Prague Montage.jpg|250px]]
 |  pildiallkiri = 
-|  riik = Tšehhi
+|  riik = Tsehhi
 |  suurus = 496
 |  elänikke = 1 262 106 (2011)
 |  lat_deg = 50
@@ -13,12 +13,12 @@
 |  lon_min = 25
 |  lon_ik = E
 |  kaardi_pilt = [[Pilt:Kraj Hlavni mesto Praha.svg|250px|]]
-|  kaardiallkiri = Kon Praha Tšehhin om
+|  kaardiallkiri = Kon Praha Tsehhin om
 }}
 
-'''Praha''' om [[Tšehhi]] [[pääliin]] ja kõgõ suurõmb [[liin]].
+'''Praha''' om [[Tsehhi]] [[pääliin]] ja kõgõ suurõmb [[liin]].
 
-[[Katõgooria:Tšehhi liinaq]]
+[[Katõgooria:Tsehhi liinaq]]
 [[Katõgooria:Õuruupa pääliinaq]]
 [[Katõgooria:Pääliinaq]]
 
