--- a/Praha.mw
+++ b/Praha.mw
@@ -18,7 +18,7 @@
 
 '''Praha''' om [[Tsehhi]] [[pääliin]] ja kõgõ suurõmb [[liin]].
 
-[[Katõgooria:Tsehhi liinaq]]
+[[Katõgooria:Tšehhi liinaq]]
 [[Katõgooria:Õuruupa pääliinaq]]
 [[Katõgooria:Pääliinaq]]
 
