Tagasi võet muutminõ #163493, mink tekk' [[Special:Contributions/2A00:1028:9199:C652:BC99:4D69:E6BD:D790|2A00:1028:9199:C652:BC99:4D69:E6BD:D790]] ([[User talk:2A00:1028:9199:C652:BC99:4D69:E6BD:D790|Arotus]])

--- a/Praha.mw
+++ b/Praha.mw
@@ -18,7 +18,7 @@
 
 '''Praha''' om [[Tsehhi]] [[pääliin]] ja kõgõ suurõmb [[liin]].
 
-[[Katõgooria:Tšehhi liinaq]]
+[[Katõgooria:Tsehhi liinaq]]
 [[Katõgooria:Õuruupa pääliinaq]]
 [[Katõgooria:Pääliinaq]]
 
