--- a/Klimti_Gustav.mw
+++ b/Klimti_Gustav.mw
@@ -12,12 +12,13 @@
 '''Klimti Gustav''' (Gustav Klimt, 1862-1918) oll' [[Austria]] kunstnik.
 
 == Pilte ==
-
 <gallery>
 Image:Gustav Klimt 016.jpg|''Suudlus'' (1907-1908)
 Image:Gustav Klimt 037.jpg|''Idyll'' (1884)
 Image:Gustav Klimt 039.jpg| ''Judith mit dem Haupt Holofernes'' (1901)
 </gallery>
+
+{{Commonscat|Gustav Klimt}}
 
 [[Katõgooria:Austria inemiseq|Klimti]]
 [[Katõgooria:Austria kunstniguq|Klimti]]
