--- a/Niger.mw
+++ b/Niger.mw
@@ -2,7 +2,7 @@
 Nimi=Niger|
 Genitiiv=Nigeri|
 Lipp=Pilt:Flag of Niger.svg|
-Vapp=Pilt:Coat of Arms of Niger.svg|
+Vapp=Pilt:Coat_of_arms_of_Niger.svg|
 Kaart=Pilt:LocationNiger.svg|
 Riigikiil=[[prantsusõ kiil]]|
 Pääliin=[[Niamey]]|
