The file [[:Image:Coat_of_Arms_of_the_Pitcairn_Islands.svg]] has been replaced by [[:Image:Coat_of_arms_of_the_Pitcairn_Islands.svg]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renamin...

--- a/Pitcairn.mw
+++ b/Pitcairn.mw
@@ -2,7 +2,7 @@
 Nimi=Pitcairn<br />Pitkern Ilan<br />Pitcairn Islands|
 Genitiiv=Pitcairni|
 Lipp=Image:Flag of the Pitcairn Islands.svg |
-Vapp=Image:Coat of Arms of the Pitcairn Islands.svg|
+Vapp=Image:Coat_of_arms_of_the_Pitcairn_Islands.svg|
 Kaart= Image:Pacific-Ocean-Pitcairn-Island-on-globe-view-English.jpg |
 Riigikiil=[[inglüse kiil]], [[pitkerni kiil]]|
 Pääliin=[[Adamstown]]|
