The file [[:Image:Coat_of_Arms_of_Vanuatu.svg]] has been replaced by [[:Image:Coat_of_arms_of_Vanuatu.svg]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harmoniz...

--- a/Vanuatu.mw
+++ b/Vanuatu.mw
@@ -2,7 +2,7 @@
 Nimi=Vanuatu|
 Genitiiv=Vanuatu|
 Lipp=Pilt:Flag of Vanuatu.svg|
-Vapp=Pilt:Coat of Arms of Vanuatu.svg|
+Vapp=Pilt:Coat_of_arms_of_Vanuatu.svg|
 Kaart=Pilt:LocationVanuatu.png|
 Riigikiil=[[bislama kiil]], [[inglüse kiil]], [[prantsusõ kiil]]|
 Pääliin=[[Vila]]|
