The file [[:Image:Coat_of_Arms_of_Zambia.svg]] has been replaced by [[:Image:Coat_of_arms_of_Zambia.svg]] by administrator [[:commons:User:Ymblanter]]: ''[[commons:COM:FR|File renamed]]: [[commons:COM:FR#reasons|File renaming criterion #6]]: Harmonize...

--- a/Sambia.mw
+++ b/Sambia.mw
@@ -2,7 +2,7 @@
 Nimi=Sambia|
 Genitiiv=Sambia|
 Lipp=Pilt:Flag of Zambia.svg|
-Vapp=Pilt:Coat of Arms of Zambia.svg|
+Vapp=Pilt:Coat_of_arms_of_Zambia.svg|
 Kaart=Pilt:LocationZambia.svg|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Lusaka]]|
