--- a/Zimbabwe.mw
+++ b/Zimbabwe.mw
@@ -2,7 +2,7 @@
 Nimi=Zimbabwe|
 Genitiiv=Zimbabwe|
 Lipp=Pilt:Flag of Zimbabwe.svg|
-Vapp=Pilt:Coat of Arms of Zimbabwe.svg|
+Vapp=Pilt:Coat_of_arms_of_Zimbabwe.svg|
 Kaart=Pilt:LocationZimbabwe.svg|
 Riigikiil=[[inglüse kiil]], [[šona kiil]], [[ndebele kiil]]|
 Pääliin=[[Harare]]|
