--- a/Saami_keeleq.mw
+++ b/Saami_keeleq.mw
@@ -57,3 +57,5 @@ Soomõn tunnistõdas kolmõ saami kiilt: põh'asaami, inarisaami ni koltasaami k
 ===Vinnemaa===
 
 Vinnemaal olõ-õi saami keelel ammõtlist staatust. 2012. aastagast saaniq om saami kiilt opat [[Murmansk|Murmanski]] ülikoolin.
+
+[[Category:Keeleq]]
