--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -8,11 +8,11 @@ Grünthal om opnuq ka [[Budapest]]i Ülikoolin ja om reisnüq muuhulgan [[Marima
 Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeleteadlane Grünthali Villem.
 
 == Publikatsiuunõ (valik) ==
-;autorina, raamatit
+;raamatit
 * ''Livvistä liivin. Itämerensuomalaiset etnonyymit.'' Helsinki: Suomalais-ugrilainen laitos 1997 (Castrenianumin Toimitteita 51).
 * ''Finnic adpositions and cases in change.'' Helsinki: Suomalais-ugrilainen seura 2003 (Mémoires de la Société Finno-Ougrienne 244).
 
-;autorina, artikleid
+;artikleit
 * ''Kansainvälinen fennougristiopiskelijoiden tapaaminen. '' – Virittäjä 92 (1988), 529–532.
 * ''1991: Marilaisten ja mordvalaisten arkipäivä ja kansallistietoisuus. '' – Kieliposti 4/1991, 24–33.
 * ''Sananmuodostus ja johtimien merkitys eräiden marin sanojen etymologiassa. '' – Journal de la Société Finno-Ougrienne 86 (1995), 87–102.
