*Empty MediaWiki Message*

--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -20,7 +20,7 @@ Hindäperi-1=|
 Hindäperi-2=6. joulukuu 1917|
 Raha=[[Õuro]]|
 Aig=[[Hummogu-Õuruupa aig]] (UTC+2)|
-Suvõaig=[[Hummogu-Õuruupa suvõaig]] (UTC+3)|
+Suvõaig=[[Õuruupa suvõaig|Hummogu-Õuruupa suvõaig]] (UTC+3)|
 Riigihümn'=[[Maamme]]|
 Internetitunnus=[[.fi]]|
 Telefonikuud'=358|
