vector version available ([[Commons:Commons:GlobalReplace|GlobalReplace v0.3]])

--- a/Austraalia.mw
+++ b/Austraalia.mw
@@ -2,7 +2,7 @@
 Nimi=Austraalia|
 Genitiiv=Austraalia|
 Lipp=Pilt:Flag of Australia.svg|
-Vapp=Pilt:Australian Coat of Arms.png|
+Vapp=Pilt:Coat of Arms of Australia.svg|
 Kaart=Pilt:Australia (orthographic projection).svg|
 Riigikiil=[[inglüse kiil]]|
 Pääliin=[[Canberra]]|
