--- a/Cooki_saarõq.mw
+++ b/Cooki_saarõq.mw
@@ -11,7 +11,7 @@ Rahvaarv=19 569 (2006)|
 Internetitunnus=[[.ck]]
 }}
 
-'''Cooki saarõq''' om saarõstik [[Okõaania]]n, midä haldas [[Vahtsõnõ Meremaa]]. Cooki saari pääliin om [[Avarua]].
+'''Cooki saarõq''' om [[saaristu]] [[Okõaania]]n, midä valitsõs [[Vahtsõnõ Meremaa]]. Cooki saari pääliin om [[Avarua]].
 
 == Aolugu ==
 
