*Empty MediaWiki Message*

--- a/Saar.mw
+++ b/Saar.mw
@@ -13,3 +13,6 @@ Väikeisi saari kutsutas [[laid|laiõs]], [[laid|saarõkõisis]], [[laid|ruiõs]
 *[http://et.wikipedia.org Eestikeeline Vikipeediä]
 
 [[Katõgooria:Maatiidüs]]
+
+[[et:Saar]]
+[[en:Island]]
