--- a/Bioloogia.mw
+++ b/Bioloogia.mw
@@ -1,6 +1,6 @@
 '''Bioloogia''' ([[vanakreeka kiil'|kreeka]] sõnost βίος '[[elo]]' ja λόγος '[[logos]]') om [[luudustiidüs]]e haro, miä uur [[elo|ello]]. Võro keeli um bioloogia kotsilõ pruugit ka nimetüst '''elotiidüs'''.
 
-Bioloogia uur [[elolinõ|eloliidsi]] ehitüst, arõnõmist ja [[ülevänpidämine|ülevänpidämist]], ni näide vaihõkõrdo hindäkesken ja [[keskkund|keskkunnaga]].
+Bioloogia uur [[elolinõ|eloliisi]] ehitüst, arõnõmist ja [[ülevänpidämine|ülevänpidämist]], ni näide vaihõkõrdo hindäkesken ja [[keskkund|keskkunnaga]].
 
 == ==
 <gallery>
