--- a/Miilva_järv.mw
+++ b/Miilva_järv.mw
@@ -22,7 +22,7 @@
 
 '''Miilva järv''' [.Miilva järv] om [[järv]] [[Räpinä kihlkund|Räpinä kihlkunnan]] [[Räpinä vald|Räpinä vallan]] [[Miilva suu]] lõunõhummoguservän.  
 
-Miilva järve keskel om üts saarõkõnõ (0,4 ha).
+Miilva järve keskel om üts [[saarõkõnõ]] (0,4 ha).
 
 Miilva järve saasõ vett suukraavõst, järvest lätt välllä [[Toolamaa oja]], miä juusk [[Võhandu jõgi|Võhandu jõkkõ]]. Vesi vaihtus ärq 2,1 kõrda aastagan.
 
