*Empty MediaWiki Message*

--- a/Laid.mw
+++ b/Laid.mw
@@ -1,6 +1,6 @@
 ''Seo artikli kõnõlõs saarõst; liputiidüse mõistõ kotsilõ kaeq artiklit [[Laid (liputiidüs)]]''
 ----
-'''Laid''' (umakäänüs ''laiu'', vai ka '''saarõkõnõ''', '''leedeq''' vai '''ruu''') om välläkujonu [[kasvitu|kasvistu]]ga väiku [[saar]].
+'''Laid''' (umakäänüs ''laiu'', vai ka '''saarõkõnõ''', '''leedeq''' vai '''ruu''') om välläkujonu [[kasvistu|kasvistu]]ga väiku [[saar]].
 
 [[Pindala]] om hariligult paarist [[hektär]]ist mõnõkümne (harvõmbahe mõnõsaa) hektärini.
 
