*Empty MediaWiki Message*

--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -1,18 +1,18 @@
 '''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om soomõ [[soomõ-ugri keeleq|fennougrist]].
 
 == Haridus ==
-Riho Manivald Villem Grünthal oppõ 1983. aastagast [[Helsingi Ülikuul|Helsingi Ülikoolin]] fennougristikat ja [[õdagumeresoomõ keeleq| õdagumeresoomõ kiili]]. Aastal 1990 magistri, 1996 litsentsiaat ja aastagal 2003 filoloogia doktor. 2005. aastagast om Grünthal Helsingi ülikooli õdagumeresoomõ kiili profesri.
+Riho Manivald Villem Grünthal oppõ 1983. aastagast [[Helsingi Ülikuul|Helsingi Ülikoolin]] fennougristikat ja [[õdagumeresoomõ keeleq| õdagumeresoomõ kiili]]. Aastagal 1990 magistri, 1996 litsentsiaat ja aastagal 2003 filoloogia doktor. 2005. aastagast om Grünthal Helsingi ülikooli õdagumeresoomõ kiili profesri.
 
 Grünthal om opnuq ka [[Budapest]]i Ülikoolin ja om reisnüq muuhulgan [[Marimaa]]l ja [[Mordvamaa]]l, tennüq välitüüd [[vepsläseq|vepsläisi]] man. Timä tiidüsligu huvi keskpunktin ommaq väikumbaq õdagumeresoomõ rahvaq, innekõgõ vepsläseq, soomõ-ugri etümoloogia ja keeletüpoloogia.
 
-Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeleteadlane Grünthali Villem.
+Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeletiidläne Grünthali Villem.
 
-== Publikatsiuunõ (valik) ==
+== Välläantut (valik) ==
 ;raamatit
 * ''Livvistä liivin. Itämerensuomalaiset etnonyymit.'' Helsinki: Suomalais-ugrilainen laitos 1997 (Castrenianumin Toimitteita 51).
 * ''Finnic adpositions and cases in change.'' Helsinki: Suomalais-ugrilainen seura 2003 (Mémoires de la Société Finno-Ougrienne 244).
 
-;artikleit
+;artikliid
 * ''Kansainvälinen fennougristiopiskelijoiden tapaaminen. '' – Virittäjä 92 (1988), 529–532.
 * ''1991: Marilaisten ja mordvalaisten arkipäivä ja kansallistietoisuus. '' – Kieliposti 4/1991, 24–33.
 * ''Sananmuodostus ja johtimien merkitys eräiden marin sanojen etymologiassa. '' – Journal de la Société Finno-Ougrienne 86 (1995), 87–102.
@@ -29,15 +29,17 @@ Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeleteadlane Grünthal
 * ''Kieliyhteisön rapautuminen ja kielellisen identiteetin muutos: 2000-luvun ersämordvalaiset ja vepsäläiset.'' – Kielissä kulttuurien ääni. Toimittaneet Anna Idström ja Sachiko Sosa. Helsinki: Suomalaisen Kirjallisuuden Seura 2009 (Tietolipas 228), 265–289.
 * ''Population decline and the Erosion of the Veps Language Community.'' – Ethnic and Linguistic Context of Identitry: Finno-Ugric Minorities. Ed. by Riho Grünthal & Magdolna Kovács. Helsinki 2011 (Uralica Helsingiensia 5), 267–293.
 
-;toimetajana
+;toimõndõdut
 * (koos Sirpa Penttise & Tapani Salmisega) ''IFUSCO 1988. Proceedings of the Fifth International Finno-Ugrist Students’ Conference, Helsinki, 22–26 May 1988.'' Helsinki: Castrenianium & Finno-Ugrian Society 1989 (Castrenianumin Toimitteita 35).
 * (koos [[Johanna Laakso]]ga) ''Oekeeta asijoo. Commentationes Fenno-Ugricae in honorem Seppo Suhonen sexagenarii.'' Helsinki: Suomalais-ugrilainen seura 1998 (Mémoires de la Société Finno-Ougrienne 228).
 * ''Ennen, muinoin. Miten menneisyyttämme tutkitaan.'' Helsinki: Sumalaisen Kirjallisuuden Seura 2002 (Tietolipas 180).
 * (koos Petri Kallioga) ''A Linguistic Map of Prehistoric Northern Europe.'' Helsinki: Société Finno-Ougrienne 2012. (Mémoires de la Société Finno-Ougrienne 266).
 
-==Vaata ka==
+==Kaeq viil==
 *https://tuhat.halvi.helsinki.fi/portal/fi/persons/riho-grunthal(e234012d-ed4b-485b-82b4-4f37c612baf9).html
 
-[[Kategooria:Helsingi ülikooli professorid]]
-[[Kategooria:Fennougristid]]
-[[Kategooria:Sündinud 1964]]
+[[Katõgooria:keeletiidläseq]]
+
+[[et:Riho Grünthal]]
+[[en:Riho Grünthal]]
+[[fi:Riho Grünthal]]
