--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -1,3 +1,5 @@
+[[Pilt:Riho Grünthal2014.jpg|300px|Riho Grünthal aastagal 2014]]
+
 '''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om soomõ [[soomõ-ugri keeleq|fennougrist]].
 
 == Haridus ==
