--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -1,4 +1,4 @@
-[[Pilt:Riho Grünthal2014.jpg|thumb|300px|right|Riho Grünthal aastagal 2014]]
+[[Pilt:Riho Grünthal2014.jpg|thumb|300px|right|Grünthali Riho aastagal 2014]]
 
 '''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om soomõ [[soomõ-ugri keeleq|fennougrist]].
 
