*Empty MediaWiki Message*

--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -45,3 +45,4 @@ Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeletiidläne Grüntha
 [[et:Riho Grünthal]]
 [[en:Riho Grünthal]]
 [[fi:Riho Grünthal]]
+[[de:Riho Grünthal]]
