--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -1,6 +1,6 @@
 [[Pilt:Riho Grünthal2014.jpg|thumb|300px|right|Grünthali Riho aastagal 2014]]
 
-'''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om soomõ [[soomõ-ugri keeleq|fennougrist]].
+'''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om eesti suku soomõ [[soomõ-ugri keeleq|fennougrist]].
 
 == Haridus ==
 Riho Manivald Villem Grünthal oppõ 1983. aastagast [[Helsingi Ülikuul|Helsingi Ülikoolin]] fennougristikat ja [[õdagumeresoomõ keeleq| õdagumeresoomõ kiili]]. Aastagal 1990 magistri, 1996 litsentsiaat ja aastagal 2003 filoloogia doktor. 2005. aastagast om Grünthal Helsingi ülikooli õdagumeresoomõ kiili profesri.
