--- a/Kaaratsimm.mw
+++ b/Kaaratsimm.mw
@@ -1,4 +1,10 @@
-'''Kaaratsimm''' om lihtsä eihtüsega üte- vai katsatuurilinõ eesti [[rahvatands]], midä tandsitas [[„Kaara-Tsimmi“]] viie perrä.
-Tandsun om inämbält 4 inemist (2 paari). A-osa võtmõliikminõ om aiglaidsi ja kibõhidõ käärdkargamiisi vaihõlõminõ. Alostama piät kura jalagaq. B-osahn om 2+3 pliksi ja 4 sammu pooltiirun. Tuu om Ullo Toomi säedüs. Anna Raudkatsi säedüssen om 2 pliksi ja 6 sammu. 
-Säänestmuudu tandsõ tundas ka [[Läti]]n ja [[Leedu]]n. Lõuna-Tartomaalt rännäs taa tands 20.aastasaal edesi üle terve [[Eesti]].
-1999. aastast saaniq om [[Võnnu]] alõvin kõrraldõt „Kaaratsimmi“ võistllustandsmist  rahvatandsurühmile.
+'''Kaaratsimm''' (vai ka '''Kaarajaan''') om lihtsä eihtüsega üte- vai katsatuurilinõ eesti [[rahvatands]], midä tandsitas "[[Kaara-Tsimm]]i" viie perrä.
+
+Tandsun om inämbält 4 inemist (2 paari). A-osa võtmõliikminõ om aiglaidsi ja kibõhidõ käärdkargamiisi vaihõlõminõ. Alostama piät kura jalagaq. B-osan om 2+3 pliksi ja 4 sammu puultiirun. Tuu om Ullo Toomi säedüs. Anna Raudkatsi säedüssen om 2 pliksi ja 6 sammu.
+ 
+Säänestmuudu tandsõ tundas ka [[Läti]]n ja [[Leedu]]n. Lõunõ-[[Tartomaa]]lt rännäs taa tands [[20. aastagasada|20. aastagasaal]] edesi üle terve [[Eesti]].
+1999. aastagast saaniq om [[Võnnu]] alõvin kõrraldõt „Kaaratsimmi“ võistlustandsmist  rahvatandsurühmile.
+
+[[katõgooria:tandsuq]]
+
+[[et:Kaerajaan]]
