--- a/Kaara-Tsimm.mw
+++ b/Kaara-Tsimm.mw
@@ -1,7 +1,7 @@
-'''„Kaara-Tsimm“''' om eesti [[rahvalaul]], minkperrä tandsitas  [[kaaratsimmi]].
-[[Friedebert Tuglas]] om kirotanuq, et „Kaara-Tsimmilõ“ nime andnuq miis oll’ Lääniste külä sepp Jaan Matson (1858–1921), hellänimegaq Kaara-Tsimm. 1889. aastal johtunuq timäga Ahja mõisan nallakas lugu: tä oll’ tütrikit piilnuq, aq oll’ vaihõlõ jäänüq. Tuust tetti  laul, miä alostas synnogaq "Ai Kaara-Jaan, Kaara-Jaan, ai karga vällä kaema". Täämbä om alalõ jäänüq ynnõ paar salmi. 
+'''„Kaara-Tsimm“''' om eesti [[rahvalaul]], mink perrä tandsitas  [[Kaaratsimmi]].
+[[Friedebert Tuglas]] om kirotanuq, et „Kaara-Tsimmilõ“ nime andnuq miis oll’ [[Lääniste]] külä sepp Jaan Matson (1858–1921), hellänimegaq Kaara-Tsimm. 1889. aastal johtunuq timäga [[Ah'a]] mõisan nal'akas lugu: tä oll’ tütrikit piilnuq, aq oll’ vaihõlõ jäänüq. Tuust tetti laul, miä alostas sõnnogaq "Ai Kaara-Jaan, Kaara-Jaan, ai kargaq vällä kaema". Täämbädses om alalõ jäänüq õnnõ paar salmi. 
 
-== Laulusynaq == 
+== Laulusõnaq == 
 :<nowiki>:,:</nowiki> Kaara-Jaan, oi Kaara-Jaan,,
 :oi kargaq vällä kaema!<nowiki>:,:</nowiki>  
 :<nowiki>:,:</nowiki> Kas ommaq kesväq keerolidsõq,
@@ -16,3 +16,7 @@
 :oi kargaq vällä kaema!<nowiki>:,:</nowiki>  
 :<nowiki>:,:</nowiki> Mis om Kaiel vika saanuq,
 :et tä kõvva kiugahtanuq. <nowiki>:,:</nowiki>
+
+[[katõgooria:rahvalauluq]]
+
+[[et:Kaera-Jaan]]
