*Empty MediaWiki Message*

--- a/Kaara-Tsimm.mw
+++ b/Kaara-Tsimm.mw
@@ -1,5 +1,5 @@
 '''„Kaara-Tsimm“''' om eesti [[rahvalaul]], mink perrä tandsitas  [[Kaaratsimmi]].
-[[Friedebert Tuglas]] om kirotanuq, et „Kaara-Tsimmilõ“ nime andnuq miis oll’ [[Lääniste]] külä sepp Jaan Matson (1858–1921), hellänimegaq Kaara-Tsimm. 1889. aastal johtunuq timäga [[Ah'a]] mõisan nal'akas lugu: tä oll’ tütrikit piilnuq, aq oll’ vaihõlõ jäänüq. Tuust tetti laul, miä alostas sõnnogaq "Ai Kaara-Jaan, Kaara-Jaan, ai kargaq vällä kaema". Täämbädses om alalõ jäänüq õnnõ paar salmi. 
+[[Tuglasõ Friedebert]] om kirotanuq, et „Kaara-Tsimmilõ“ nime andnuq miis oll’ [[Lääniste]] külä sepp Jaan Matson (1858–1921), hellänimegaq Kaara-Tsimm. 1889. aastal johtunuq timäga [[Ah'a]] mõisan nal'akas lugu: tä oll’ tütrikit piilnuq, aq oll’ vaihõlõ jäänüq. Tuust tetti laul, miä alostas sõnnogaq "Ai Kaara-Jaan, Kaara-Jaan, ai kargaq vällä kaema". Täämbädses om alalõ jäänüq õnnõ paar salmi. 
 
 == Laulusõnaq == 
 :<nowiki>:,:</nowiki> Kaara-Jaan, oi Kaara-Jaan,,
