--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -1,3 +1,13 @@
+{{Elokäük 
+ | nimi = Grünthali Riho
+ | eestikeeline_nimi = Riho Grünthal
+ | pilt = Riho Grünthal2014.jpg
+ | pildiallkiri = Grünthali Riho aastagal 2014
+ | sünnüaig = [[22. lehekuu päiv]] [[1964]]
+ | sünnüpaik = [[Hesingi]], [[Soomõ]]
+ | ammõt = keeletiidläne
+ }}
+
 [[Pilt:Riho Grünthal2014.jpg|thumb|300px|right|Grünthali Riho aastagal 2014]]
 
 '''Grünthali Riho''' (Riho Grünthal, sündünüq [[22. lehekuu päiv|22. lehekuu pääväl]] [[1964]] [[Helsingi]]n) om eesti suku soomõ [[soomõ-ugri keeleq|fennougrist]].
