*Empty MediaWiki Message*

--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -4,7 +4,7 @@
  | pilt = Riho Grünthal2014.jpg
  | pildiallkiri = Grünthali Riho aastagal 2014
  | sünnüaig = [[22. lehekuu päiv]] [[1964]]
- | sünnüpaik = [[Hesingi]], [[Soomõ]]
+ | sünnüpaik = [[Helsingi]], [[Soomõ]]
  | ammõt = keeletiidläne
  }}
 
