--- a/Aovüü.mw
+++ b/Aovüü.mw
@@ -1,4 +1,4 @@
-'''Aovüü''' om 15 pikkuskraadi lakjunõ ütelt puult tõsõni küündüv "riba" Maakeräl, kon om üts ja sama kelläaig – vüüaig. Aovöid om 40.
+'''Aovüü''' om 15 pikkuskraadi lakjunõ ütelt puult tõsõni küündüv "riba" Maakeräl, kon om üts ja sama kelläaig – [[vüüaig]]. Aovöid om 40.
 
 
 [[Pilt:Standard time zones of the world.png|500px|thumb|right|Maa aovüüq 2007. aastaga saisoga]]
