--- a/UTC.mw
+++ b/UTC.mw
@@ -1,4 +1,4 @@
-'''UTC''' (inglüse k ''Universal Time Coordinated'') om ilmamaa aig aastagast 1972. Inne tuud oll' keskmäne pääväaig GMT (''Greenwich Mean Time''). UTC aigo andvaq raadiosaatjaq egä täüstunn.
+'''UTC''' (inglüse k ''Universal Time Coordinated'') om [[maailm|üleilmalinõ]] aig aastagast 1972. Inne tuud oll' keskmäne pääväaig GMT (''Greenwich Mean Time''). UTC aigo andvaq raadiosaatjaq egä täüstunn.
 
 [[katõgooria:Aig]]
 
