*Empty MediaWiki Message*

--- a/Grünthali_Riho.mw
+++ b/Grünthali_Riho.mw
@@ -49,6 +49,8 @@ Grünthali esäpuulnõ vanaesä oll' eesti luulõtaja ja keeletiidläne Grüntha
 *https://tuhat.halvi.helsinki.fi/portal/fi/persons/riho-grunthal(e234012d-ed4b-485b-82b4-4f37c612baf9).html
 
 [[Katõgooria:keeletiidläseq]]
+[[Katõgooria:Eesti inemiseq]]
+[[Katõgooria:Soomõ inemiseq]]
 
 [[et:Riho Grünthal]]
 [[en:Riho Grünthal]]
