--- a/Franklini_Benjamin.mw
+++ b/Franklini_Benjamin.mw
@@ -1,8 +1,10 @@
 [[Pilt:Benjamin Franklin by Jean-Baptiste Greuze.jpg|pisi|]]
-'''Franklini Benjamin''' (Benjamin Franklin, 17. jaanuar 1706  – 17. aprill 1790) oll' poliitik, tiidläne, vällälöüdjä, aokiränik ja üts päälik Ameeriga Ütisriike kodosõan.
-1743. aastagal lõi Benjamin Ameeriga Filosoofiaseldsi.
 
-Franklini Benjamini näopilt' om kujotõt Ameeriga Ütisriike 100-dollarilidse rahatähe pääl.'
+'''Franklini Benjamin''' (Benjamin Franklin, [[17. vahtsõaastakuu päiv]] [[1706]] – [[17. mahlakuu päiv]] [[1790]]) oll' poliitik, tiidläne, vällälöüdjä, aokiränik ja üts päälik [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] kodosõan.
+
+[[1743]]. aastagal lõi Benjamin Ameeriga Filosoofiaseldsi.
+
+Franklini Benjamini näopilt om kujotõt Ameeriga Ütisriike 100-dollarilidse rahatähe pääl.
 
 [[et:Benjamin Franklin]]
 [[en:Benjamin Franklin]]
