--- a/Franklini_Benjamin.mw
+++ b/Franklini_Benjamin.mw
@@ -6,7 +6,7 @@
 
 Franklini Benjamini näopilt om kujotõt Ameeriga Ütisriike 100-dollarilidse rahatähe pääl.
 
-[[katõgooria:Ameeriga Ütisriike poliitiguq]]
+[[katõgooria:Ameeriga Ütisriike inemiseq]]
 
 [[et:Benjamin Franklin]]
 [[en:Benjamin Franklin]]
