--- a/Suvõaig.mw
+++ b/Suvõaig.mw
@@ -1,4 +1,4 @@
-'''Suvõaig''' om [[vüüaig|vüüaost]] üte tunni jago illatsõmbas nihutõt kelläaig. [[Õuruupa]]n mindäs üle suvõaolõ [[urbõkuu]] viimätsel pühäpääväl kellä 01:00 [[UTC]] aigo (Eestin 3:00) ja tagasi vüündiaolõ mindäs [[rehekuu]] viimätsel pühapääväl kellä 01:00 [[UTC]] aigo (Eestin 4:00). Sis keerähtäseq kelläq tunni jago tagasi. Mitteammõtlidsõlt nimetedäs vüündiaigo ka talvõaos. 
+'''Suvõaig''' om [[vüüaig|vüüaost]] üte tunni jago illatsõmbas nihutõt kelläaig. [[Õuruupa]]n mindäs üle suvõaolõ [[urbõkuu]] viimätsel pühäpääväl kellä 01:00 [[UTC]] aigo (Eestin 3:00) ja tagasi vüüaolõ mindäs [[rehekuu]] viimätsel pühapääväl kellä 01:00 [[UTC]] aigo (Eestin 4:00). Sis keerähtäseq kelläq tunni jago tagasi. Mitteammõtlidsõlt nimetedäs vüüaigo ka talvõaos. 
 
 Suvõao tarvitust peetäs tarvilidsõs, selle et inemiseq toimõndasõq sis inämb aol, kuq paistus luuduslik valgus. Niimuudu hoitvaq inemiseq [[eelektri]]energiät kokko. 
 
