--- a/Vüüaig.mw
+++ b/Vüüaig.mw
@@ -1,6 +1,6 @@
-'''Vüündiaig''' (inglüse k ''zone time, standard time'') om kelläaig kimmäs määrätün paigan vai riigin tuu kotusõ aovüü perrä. Vüündiaig niguq ka maatiideline pikkus jaotõdas 24 aovüüs. Aovüü piiriq lääväq riike vai paikkundõ vaihõliidsi tallituspiire piten.
+'''Vüüaig''' (inglüse k ''zone time, standard time'') om kelläaig kimmäs määrätün paigan vai riigin tuu kotusõ aovüü perrä. Vüüaig niguq ka maatiideline pikkus jaetas 24 aovüüs. Aovüü piiriq lääväq riike vai paikkundõ vaihõliidsi tallituspiire piten.
 
-Vüündiaoq ommaq ütstõõsõst tõistõ üte täüstunni jago. Tõistmuudu om mõnõn ütsikun riigin (näütüses Iraanin, Afganistanin, Indian, Myanmarin ja Nepalin) vai riigiossõn (Kanadan, Austraalian), kon aig lätt vüündiaost lahko poolõ tunni jago rohkõmb vai vähämb.
+Vüüaoq ommaq ütstõõsõst tõistõ üte täüstunni jago. Tõistmuudu om mõnõn ütsikun riigin (näütüses Iraanin, Afganistanin, Indian, Myanmarin ja Nepalin) vai riigiosõn (Kanadan, Austraalian), kon aig lätt vüüaost lahko poolõ tunni jago rohkõmb vai vähämb.
 
 [[katõgooria:Aig]]
 
