*Empty MediaWiki Message*

--- a/Suidsu_Gustav.mw
+++ b/Suidsu_Gustav.mw
@@ -31,4 +31,5 @@ Edimäne kogo „Elo tuli“ (1905) näütäs aastagasaa algusõ revolutsioonime
 Lisas luulõlõ om tää avaldanuq  kats esseekoko „Tsihiq ja kaehtusõq“ (1906) ja „Nuur-Eesti nõlvakult“ (1931) ni uurmiisi eesti kirändüsluust.
 
 [[katõgooria:Eesti luulõtajaq]]
+[[katõgooria:Eesti poliitiguq]]
 [[katõgooria:Eesti inemiseq]]
