*Empty MediaWiki Message*

--- a/Laid.mw
+++ b/Laid.mw
@@ -6,7 +6,7 @@
 
 Laiuq ommaq hariligult ilma inemiisildä.
 
-Laiuq ommaq näütüses: [[Hobulaid]], [[Kesselaid]], [[Viirelaid]]. Kõgõ suurõmb laid om [[Vohilaid]], kõgõ vähämbät om rassõ paika pandaq.
+Laiuq ommaq näütüses: [[Hobulaid]], [[Kesselaid]], [[Viirelaid]]. Eesti kõgõ suurõmb laid om [[Vohilaid]], kõgõ vähämbät om rassõ paika pandaq.
 
 Inämbüs Eesti laidõ om Õdagu-Eestin.
 
