*Empty MediaWiki Message*

--- a/Ütsüs.mw
+++ b/Ütsüs.mw
@@ -1,4 +1,4 @@
-'''Ütsüs''' ehk '''singular''' om [[Arv (keeletiidüs)|arvokatõgooria]] liigõq, miä eäldäs ütte asja vastandõdult katõlõ vai inämbäle (nt ''naanõ, laud, vihk''). Ütsüsele vastandus [[mitmus]] ehk pluural.
+'''Ütsüs''' ehk '''singular''' om [[Arv (keeletiidüs)|arvokatõgooria]] liigõq, miä eräldäs ütte asja vastandõdult katõlõ vai inämbäle (nt ''naanõ, laud, vihk''). Ütsüsele vastandus [[mitmus]] ehk pluural.
 
 Ütsüsel olõ-õi tunnust.
 
