*Empty MediaWiki Message*

--- a/Kerberos.mw
+++ b/Kerberos.mw
@@ -5,3 +5,5 @@ Kerberosõ vanõmbaq olliq [[Echidna]], kiä olľ poolõlistõ naanõ ja poolõl
 [[Kreeka]] mütoloogian ja kunstin kujotõdas Kerberost inämbüste kolme pääga. Kõgõ levinümbä seletüse perrä näge üts pää minnevaigo, tõõnõ ollõvaigo ja kolmas tullõvaigo, a tõisin lättin tähendäseq pääq sündü, nuurust ja vanahust. Kyik Kerberose pääq sööväq, nigu kinnütedäs, kygõst elävide lihha ja tuuperäst lupasõq kuulnuidõ hingi allilma, a lupa-i kinkalgi säält ärq minnäq. Kerberos vahtõ Allilma väräjät ja olľ [[Hades]]e truu vahipini.<br />
 
 Kerberosõ eläväst pääst kinniq püüdmine olľ viimäne vägitego, midä kuning [[Eurystheus]] sundõ [[Herakles]]t tegemä, et hüäskelläq timä ja [[Megaira]] latsi tapminõ. Herakles sai tuuga nakkama ja vei pini Eurystheusõ mano. Kuning peläs' Kerberost nii pall'o, et karas' [[pithos]]tõ, suurdõ hoiuvaasi, ja pallõl' Heraklesel Kerberos Allilma tagasi viiäq ni lask' tä vastatasos vabas vägitekõ tegemisest.
+
+[[katõgooria:Vanakreeka mütoloogia]]
