*Empty MediaWiki Message*

--- a/Hades.mw
+++ b/Hades.mw
@@ -5,3 +5,6 @@ Hadese vanõmbaq olliq [[titaan]]iq [[Kronos]] ja [[Rhea]] ni tää olľ [[Posei
 Hades küsse Zeusilt ütte timä tütrist naasõs, Zeus lubasigi tiäle uma ja Demeteri tütre [[Persephone]]. Hades tiidse, et Demeter om tuu vasta ja nii rüüvse tiä Persephone väega. Ku Demeter tuust teedäq sai, olľ tiä maruvihanõ ja saatsõ suurõ häöngi ja puudusõ maa pääle, kooniq timä tütär tagasi lastas. Zeus olľ sunnit alla andma ja tütrik tuudi Allilmast tagasi, a aastaga tulõ tä kolmõs kuus tagasi Hadesõ mano. Tuul aol – talvõl –  om kõik maa täüs leinä ja kurbust.<br />
 
 Hadest kujotõdas ku tumõhidõ habõnidõga kuninglist jumalat ni sagõhõhe saat tedä kolmõ pääga põrgupini [[Kerberos]]. Kuigiq täämbädsel pääväl köütüs Hades kurja ja halvaga, om tiä Vana-Kreeka mütoloogian altruistlik kangõlanõ, kiä om innemb passiivnõ ku halb.
+
+
+[[katõgooria:Vanakreeka mütoloogia]]
