*Empty MediaWiki Message*

--- a/Nike.mw
+++ b/Nike.mw
@@ -7,3 +7,5 @@ Niket om Vana-Kreeka vaasimaalõ pääl kujotõt pääle siibo mitmõ tunnismär
 Nike om lähkene jumalanna [[Athena]]ga, ni om tõõnõkõrd kygõst Athena tunnismärgis vai lisanimes. Nike om Athenast siskiq tõistsugumanõ siibo poolõst. Mynikõrd nimitedäs kattõ jumalannat üttemuudu Nikaiks.<br />
 
 Tundsambaq nimeq, miä Nikest ommaq tulnuq: Nikolaos, Nicholas, Nicola, Nick, Nicolai, Nikolai, Nicolae, Nils, Klaas, Nicole, Ike, Niki, Nikita, Nika, Niketas, Nikki, Nico, Veronica, Veronika.
+
+[[katõgooria:Vanakreeka mütoloogia]]
