--- a/The_Velvet_Underground.mw
+++ b/The_Velvet_Underground.mw
@@ -1,5 +1,5 @@
 [[Pilt:Lou Reed Malaga, Spain 1.jpg|thumb|right|Lou Reed]]
-'''The Velvet Underground''' oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] [[rokk]]ansambli, miä luudi [[1965]]. aastagal [[New York]]in.
+'''The Velvet Underground''' oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] [[rokk]]ansambli, miä luudi [[1965]]. aastagal [[New York|New Yorgin]].
 
 Ansambli läts' lakja 1970. aastagal, a tull' ildampa viil lühkos aos kokko 1990., 1992.–1994. ja viimäte 1996. aastagal.
 
