*Empty MediaWiki Message*

--- a/John_Cale.mw
+++ b/John_Cale.mw
@@ -1,5 +1,5 @@
 [[File:John Cale Angers (6).jpg|thumb|John Cale]]
-'''John Cale''' (John Davies Cale, [[9. urbõkuu päiv]] [[1942]], [[Ütiskuningriik]]) oll' Briti klavõrimängjä ja laulja. Oli liige [[The Velvet Underground]].
+'''Cale'i John''' ('''John Davies Cale''', [[9. urbõkuu päiv]] [[1942]], [[Ütiskuningriik]]) oll' Briti klavõrimängjä ja laulja. Tä oll' ´ansambli [[The Velvet Underground]] liigõq.
 
 ==Albomiq==
 * ''Vintage Violence'' (1970)
