--- a/John_Cale.mw
+++ b/John_Cale.mw
@@ -1,5 +1,5 @@
 [[File:John Cale Angers (6).jpg|thumb|John Cale]]
-'''Cale'i John''' ('''John Davies Cale''', [[9. urbõkuu päiv]] [[1942]], [[Ütiskuningriik]]) om  Briti laulja ja pillimiis. Tä oll' ´ansambli [[The Velvet Underground]] liigõq. 
+'''Cale'i John''' ('''John Davies Cale''', [[9. urbõkuu päiv]] [[1942]], [[Ütiskuningriik]]) om  Briti [[laulja]] ja [[pillimiis]]. Tä oll' ´ansambli [[The Velvet Underground]] liigõq. 
 
 Tä om mängnüq [[viiol]]it, [[vioola]], [[kitra]]t, [[basskitra]]t, [[hõrilaq|hõrilit]], [[klavõr]]it, [[klavõssiin]]i, [[klahvpilliq|klahvpillõ]], [[suupill]]i, [[tšello]]t, [[kontrabass]]i, [[saksofon]]i ja [[mellotron]]i.
 
