/* Muu ilma inemiseq */

--- a/9._urbõkuu_päiv.mw
+++ b/9._urbõkuu_päiv.mw
@@ -23,7 +23,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1942]] - [[John Cale|Cale'i John]], Briti laulja ja pillimiis
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
