--- a/Saami_keeleq.mw
+++ b/Saami_keeleq.mw
@@ -34,7 +34,7 @@ Saami kiili kõnõlõjit om kokko 60 000–100 000, säälhulgan 10 000 Soomõn.
 
 ==Aolugu==
 
-Saami keeleq ommaq arõnõnuq saami algkeelest, midä om arvatavaste kõnõld 2000–2500 aastakat tagasi kas Lõunõ-Soomõn või [[Karjala|Karjalan]]. Säält om kiil [[Ravvaaig|ravvaajal]] levinüq hummogu ja põh'a tsihin. Saami kiilin om jälgi tundmatuist paleoõuruupa kiilist, midä Õuruupan muistõhavva kõnõldi.
+Saami keeleq ommaq arõnõnuq saami algkeelest, midä om arvatavaste kõnõld 2000–2500 aastakat tagasi kas Lõunõ-Soomõn või [[Karjala|Karjalan]]. Säält om kiil [[Ravvaaig|ravvaaol]] levinüq hummogu ja põh'a tsihin. Saami kiilin om jälgi tundmatuist paleoõuruupa kiilist, midä Õuruupan muistõhavva kõnõldi.
 
 ==Kiräkeeleq==
 
