*Empty MediaWiki Message*

--- a/Raadio.mw
+++ b/Raadio.mw
@@ -1,4 +1,4 @@
-
+[[Pilt:Radio VEF206.jpg|thumb|right|VEF-tüüpi raadioaparaat]]
 
 '''Raadio''' om signaalõ saatminõ raadiolainidõ (elektromagnõtlainidõ) abil, miä ommaq sagõhussõga mõnõst kiloherdsist kooni 3 THz. 
 
