/* Muu ilma inemiseq */

--- a/22._lehekuu_päiv.mw
+++ b/22._lehekuu_päiv.mw
@@ -21,7 +21,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1964]] - [[Grünthali Riho]], [[Soomõ]] keeletiidläne
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
