--- a/Saar.mw
+++ b/Saar.mw
@@ -1,6 +1,6 @@
 '''Saar''' om maisõmaa, mink ümbre om egält puult [[vesi]]. 
 
-Saare mõistõ ala mahu-ui [[kivi|kiviq]] ja [[maisõmaa|maisõmaaq]]. Tuuperäst otsustas suurus, kas tegemist om saarõga vai ei. Kimmäst suurusõ alambmäärä saa-ai siski andaq. Ülembpiiris om kõgõ vähämb maisõmaa [[Austraalia maisõmaa|Austraalia]].
+Saarõ mõistõ ala mahu-ui [[kivi|kiviq]] ja [[maisõmaa|maisõmaaq]]. Tuuperäst otsustas suurus, kas tegemist om saarõga vai ei. Kimmäst suurusõ alambmäärä saa-ai siski andaq. Ülembpiiris om kõgõ vähämb maisõmaa [[Austraalia maisõmaa|Austraalia]].
 
 Inämbüisi mõtõldas saari all meresaari, a ka [[jõgi|jõõ-]] ja [[järv|järvesaarõq]] ommaq saarõq.
 
