*Empty MediaWiki Message*

--- a/Orwelli_George.mw
+++ b/Orwelli_George.mw
@@ -15,9 +15,10 @@ Orwelli George kuuli tubõrkuluusi 1950. aastagal Londonin.
 ==Teossõq==
 
 * "Birma pääväq" (1934)
-
 * "Kumardus Kataloonialõ" (1938)
-
 * "Eläjide talo" (1945) (romaan’, allegooria Nõvvokogoliido kotsilõ)
-
 * "1984" (1949) (düstoopia, „Eläjide talo“ ideeline jakkamine)
+
+[[en: George Orwell]]
+[[et: George Orwell]]
+[[ru: Джордж Оруэлл]]
