/* Muu ilma inemiseq */

--- a/17._vahtsõaastakuu_päiv.mw
+++ b/17._vahtsõaastakuu_päiv.mw
@@ -22,7 +22,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1706]] - [[Franklini Benjamin]], [[USA]] poliitik
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
