/* Muu ilma inemiseq */

--- a/17._mahlakuu_päiv.mw
+++ b/17._mahlakuu_päiv.mw
@@ -30,7 +30,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1790]] - [[Franklini Benjamin]], [[USA]] poliitik
 
 == Pühäq ja tähtpääväq ==
 * ...
