--- a/Pegasus.mw
+++ b/Pegasus.mw
@@ -1,7 +1,7 @@
-Pegasus (vanakreeka keelen Πήγασος) olľ [[Vana-Kreeka]] mütoloogian siivolinõ valgõ [[hopõn]]. Timä vanõmbaq olliq [[Poseidon]] ja [[Medusa]]. [[Hesiodos]]e perrä karas' Pegasus vällä Medusa kaalast, ku [[Perseus]] tuu mahaq rai. Tõõsõ variandi perrä juusk' Medusa veri merde ja Pegasus sündü verest, halust ja merekohost. Tal olľ ka üts veli, [[Chrysaor]], kiä ei olõ-õs hopõn, vaida peris harilik nuurmiis.<br />
+'''Pegasus''' (vanakreeka keelen Πήγασος) olľ [[Vana-Kreeka]] mütoloogian siivolinõ valgõ [[hopõn]]. Timä vanõmbaq olliq [[Poseidon]] ja [[Medusa]]. [[Hesiodos]]e perrä karas' Pegasus vällä Medusa kaalast, ku [[Perseus]] tuu mahaq ragi. Tõõsõ variandi perrä juusk' Medusa veri merde ja Pegasus sündü verest, halust ja merekohost. Täl olľ ka üts veli, [[Chrysaor]], kiä olõ-õs hopõn, a peris harilik nuurmiis.<br />
 
-[[Korinthos]]e kangõlanõ [[Bellerophon]] har'ot' Pegasusõ [[Athena]] abiga käsile ni ütenkuun võitliq nääq [[Kimäär]]i ja [[amatsuun]]õ vasta. Ildampa tahť Bellerophon Pegasusõga [[Olympos]]õlõ sõitaq, a kukõrdu ratsu sälläst alla, tagasi maa pääle. Esiq tõõsõndiin ommaq tuus esiq põhjusõq: kangõlanõ naas' pelgämä vai tull' tal pääpööritüs vai hiit' Pegasus tiä umast sälläst maaha [[Zeus]]i tahtmisõ perrä. A Pegasus jakas' umma tiid ja Zeus võtť tiä lahkõhe vasta. Üte variandi perrä pand' Zeus tä taivahe ni tuudmuudu sündü Pegasusõ tähtkujo. Timä nõsõng märkse lämmide keväjäilmo ja tormõ tulõkit. Tuu köüdüs või tuust tullaq, et Pegasust Zeusi välgünuuli kandjas peeti.<br />
+[[Korinthos]]õ kangõlanõ [[Bellerophon]] har'ot' Pegasusõ [[Athena]] abiga käsile ni ütenkuun võitliq nääq [[Kimäär]]i ja [[amatsuun]]õ vasta. Ildampa tahť Bellerophon Pegasusõga [[Olympos]]õlõ sõitaq, a kukõrdu ratsu sälläst alla, tagasi maa pääle. Esiq tõõsõndiin ommaq tuus esiq põhjusõq: kangõlanõ naas' pelgämä vai tull' täl pääpööritüs vai hiit' Pegasus tiä hindä sälläst maaha [[Zeus]]i tahtmisõ perrä. A Pegasus jakas' umma tiid ja Zeus võtť tiä lahkõhe vasta. Üte variandi perrä pand' Zeus tä taivahe ni tuudmuudu sündü Pegasusõ tähtkujo. Timä nõsõng märkse lämmide keväjäilmo ja tormõ tulõkit. Tuu köüdüs või tuust tullaq, et Pegasust Zeusi välginuuli kandjas peeti.<br />
 
-Pegasus ku tunnismärk tõõsõndõlõs ao joosul. Keskaost renessansini tähüsť Pegasus tarkust ja kuulsust, ildampa sai temäst luulõ ja inspiratsiooni tunnismärk. Tedä om joba antiikaost pääle ka kunstin pall'o kujotõt, kuida sis puudu tiäl köüdüs [[Muusa]]dõga. Pegasust om ka vii, päävä ja [[šamanism]]iga köüdet.
+Pegasus ku tunnismärk tõõsõndõlõs ao joosul. [[Keskaig|Keskaost]] [[renessanss|renessansini]] tähüsť Pegasus tarkust ja kuulsust, ildampa sai temäst luulõ ja inspiratsiooni tunnismärk. Tedä om joba antiikaost pääle ka kunstin pall'o kujotõt, a sis puudu tiäl köüdüs [[Muusa]]dõga. Pegasust om ka [[vesi|vii]], [[päiv|päävä]] ja [[šamanism]]iga köüdet.
 
 [[katõgooria:Vanakreeka mütoloogia]]
