*Empty MediaWiki Message*

--- a/Pegasus.mw
+++ b/Pegasus.mw
@@ -1,3 +1,5 @@
+[[Pilt:Pegaz Opera Poznań.jpg|200px|thumb|right|Pegasusõ kujo Poznani Oopõrimaja katussõ pääl]]
+
 '''Pegasus''' (vanakreeka keelen Πήγασος) olľ [[Vana-Kreeka]] mütoloogian siivolinõ valgõ [[hopõn]]. Timä vanõmbaq olliq [[Poseidon]] ja [[Medusa]]. [[Hesiodos]]e perrä karas' Pegasus vällä Medusa kaalast, ku [[Perseus]] tuu mahaq ragi. Tõõsõ variandi perrä juusk' Medusa veri merde ja Pegasus sündü verest, halust ja merekohost. Täl olľ ka üts veli, [[Chrysaor]], kiä olõ-õs hopõn, a peris harilik nuurmiis.<br />
 
 [[Korinthos]]õ kangõlanõ [[Bellerophon]] har'ot' Pegasusõ [[Athena]] abiga käsile ni ütenkuun võitliq nääq [[Kimäär]]i ja [[amatsuun]]õ vasta. Ildampa tahť Bellerophon Pegasusõga [[Olympos]]õlõ sõitaq, a kukõrdu ratsu sälläst alla, tagasi maa pääle. Esiq tõõsõndiin ommaq tuus esiq põhjusõq: kangõlanõ naas' pelgämä vai tull' täl pääpööritüs vai hiit' Pegasus tiä hindä sälläst maaha [[Zeus]]i tahtmisõ perrä. A Pegasus jakas' umma tiid ja Zeus võtť tiä lahkõhe vasta. Üte variandi perrä pand' Zeus tä taivahe ni tuudmuudu sündü Pegasusõ tähtkujo. Timä nõsõng märkse lämmide keväjäilmo ja tormõ tulõkit. Tuu köüdüs või tuust tullaq, et Pegasust Zeusi välginuuli kandjas peeti.<br />
