*Empty MediaWiki Message*

--- a/Pegasus.mw
+++ b/Pegasus.mw
@@ -1,4 +1,4 @@
-[[Pilt:Pegaz Opera Poznań.jpg|200px|thumb|right|Pegasusõ kujo Poznani Oopõrimaja katussõ pääl]]
+[[Pilt:Pegaz Opera Poznań.jpg|200px|thumb|right|Pegasusõ kujo Poznani Oopõrimaja katussõ pääl (Max Littmann, 1910)]]
 
 '''Pegasus''' (vanakreeka keelen Πήγασος) olľ [[Vana-Kreeka]] mütoloogian siivolinõ valgõ [[hopõn]]. Timä vanõmbaq olliq [[Poseidon]] ja [[Medusa]]. [[Hesiodos]]e perrä karas' Pegasus vällä Medusa kaalast, ku [[Perseus]] tuu mahaq ragi. Tõõsõ variandi perrä juusk' Medusa veri merde ja Pegasus sündü verest, halust ja merekohost. Täl olľ ka üts veli, [[Chrysaor]], kiä olõ-õs hopõn, a peris harilik nuurmiis.<br />
 
