*Empty MediaWiki Message*

--- a/Suidsu_Gustav.mw
+++ b/Suidsu_Gustav.mw
@@ -1,3 +1,13 @@
+{{Elokäük
+|pilt=Gustav Suits.jpg
+|nimi=Suidsu Gustav
+|eestikeeline_nimi=Gustav Suits
+|sünnüaig=[[30. märtekuu päiv]] [[1883]]
+|sünnüpaik=[[Tartomaa]]
+|kuulmisaig=[[23. lehekuu päiv]] [[1956]]
+|kuulmispaik=[[Stockholm]]
+|matmispaik=Stockholmi Mõtsakalmistu
+}}
 '''Suidsu Gustav''' (Gustav Suits, 30. märdikuu 1883 Tartomaa – 23. lehekuu 1956 Stockholm) oll' Eesti luulõtaja ja kirändüstiidläne. 
 
 ==Elolugu==
