*Empty MediaWiki Message*

--- a/Suidsu_Gustav.mw
+++ b/Suidsu_Gustav.mw
@@ -7,6 +7,7 @@
 |kuulmisaig=[[23. lehekuu päiv]] [[1956]]
 |kuulmispaik=[[Stockholm]]
 |matmispaik=Stockholmi Mõtsakalmistu
+|ammõt=luulõtaja ja kirändüstiidläne
 }}
 '''Suidsu Gustav''' (Gustav Suits, 30. märdikuu 1883 Tartomaa – 23. lehekuu 1956 Stockholm) oll' Eesti luulõtaja ja kirändüstiidläne. 
 
