--- a/30._märtekuu_päiv.mw
+++ b/30._märtekuu_päiv.mw
@@ -17,7 +17,7 @@
 * ...
 
 === Eesti inemiseq ===
-* ...
+* [[1883]] - [[Suidsu Gustav]], luulõtaja ja kirändüstiidläne
 
 === Muu ilma inemiseq ===
 * ...
