--- a/23._lehekuu_päiv.mw
+++ b/23._lehekuu_päiv.mw
@@ -29,7 +29,7 @@
 * ...
 
 === Eesti inemiseq ===
-* ...
+* [[1956]] - [[Suidsu Gustav]], luulõtaja ja kirändüstiidläne
 
 === Muu ilma inemiseq ===
 * ...
