*Empty MediaWiki Message*

--- a/Suidsu_Gustav.mw
+++ b/Suidsu_Gustav.mw
@@ -9,7 +9,7 @@
 |matmispaik=Stockholmi Mõtsakalmistu
 |ammõt=luulõtaja ja kirändüstiidläne
 }}
-'''Suidsu Gustav''' (Gustav Suits, 30. märdikuu 1883 Tartomaa – 23. lehekuu 1956 Stockholm) oll' Eesti luulõtaja ja kirändüstiidläne. 
+'''Suidsu Gustav''' (Gustav Suits, [[30. märtekuu päiv|30. märdikuu]] [[1883]] [[Tartomaa]] – [[23. lehekuu päiv|23. lehekuu]] [[1956]] [[Stockholm]]) oll' Eesti luulõtaja ja kirändüstiidläne. 
 
 ==Elolugu==
 
