*Empty MediaWiki Message*

--- a/Suidsu_Gustav.mw
+++ b/Suidsu_Gustav.mw
@@ -13,12 +13,12 @@
 
 ==Elolugu==
 
-Suits sündü oppajidõ perrehe. Koolitiid alost' küläkoolin, perän tuud läts' Tarto Aleksandri gümnaasiummi. Jo gümnaasiumipäivil käve tää suvildõ Soomõn, kon opas' kodooppajan prantsusõ ja s'aksa kiilt. Gümnaasiumi lõpõt` Suitsu Gustav 1904. aastagal kuldmedäliga. Perän tuud ast' tää [[Tarto Ülikuul]]i, kon oppõ keeletiidüst. Aastagal 1905 jakas' opmist [[Helsingi Ülikuul|Helsingi Ülikoolin]], kon oppõ täämbädse päävä kirändüst ja esteetikat. Tuu lõpõt' tää 1910. aastagal. 
-Aastagal 1911 kosõ Suits naasõs ülikoolisõsara, suumlasõ Aino Thauvóni. Aastagil 1911–1913 tüüt' tää Helsingi Ülikooli raamadukogon ni sis kooniq 1917. aastagani Helsingi Vinne Gümnaasiumi soomõ keele oppajan. 
+Suits sündü oppajidõ perrehe. Koolitiid alost' küläkoolin, perän tuud läts' Tarto Aleksandri gümnaasiummi. Jo gümnaasiumipäivil käve tä suvildõ [[Soomõ]]n, kon opas' kodooppajan [[prantsusõ kiil|prantsusõ]] ja [[s'aksa kiil]]t. Gümnaasiumi lõpõt` Suitsu Gustav 1904. aastagal kuldmedäliga. Perän tuud ast' tä [[Tarto Ülikuul]]i, kon oppõ [[keeletiidüs]]t. Aastagal 1905 jakas' opmist [[Helsingi Ülikuul|Helsingi Ülikoolin]], kon oppõ täämbädse päävä kirändüst ja esteetikat. Tuu lõpõt' tää 1910. aastagal. 
+Aastagal 1911 kosõ Suits naasõs ülikoolisõsara, suumlasõ Aino Thauvóni. Aastagil 1911–1913 tüüt' tää Helsingi Ülikooli raamadukogon ni sis kooniq 1917. aastagani Helsingi Vinne Gümnaasiumi [[soomõ kiil|soomõ keele]] oppajan. 
 
-Suidsu Gustav oll` Nuur-Eesti liikmisõ üts mõokambit juhtõ.
+Suidsu Gustav oll` [[Nuur-Eesti]] liikmisõ üts mõokambit juhtõ.
 
-Aastagil 1917–1919 oll' tää tekev poliitikan. Tääd peetäs Eesti esiqsaisumisõ idee ütes autoris.
+Aastagil 1917–1919 oll' tä tekev poliitikan. Tääd peetäs Eesti esiqsaisumisõ idee ütes autoris.
 
 1921–1944 tüüt' Suits Tarto Ülikooli eesti ja üledse kirändüsluu prohvõsrin ja oll' üliopilaisi siän ilmadu populaarnõ. 
 
@@ -26,7 +26,7 @@ Aastagil 1917–1919 oll' tää tekev poliitikan. Tääd peetäs Eesti esiqsaisu
 
 1935. aastagast oll` tää Uppsala ülikooli avvodoktor. 
 
-Aastagal 1944 pagõsi Suits Soomõ kaudu Ruutsi, kon tüüt` Nobeli instituudi raamadukogon.
+Aastagal 1944 pagõsi Suits Soomõ kaudu [[Roodsi|Ruutsi]], kon tüüt` Nobeli instituudi raamadukogon.
 
 Suidsu Gustav kuuli 1956. aastagal perän mitmõaastagast rassõt haigust. Tää om matõt Stockholmi Mõtsakalmuaialõ. 
 
@@ -44,3 +44,5 @@ Lisas luulõlõ om tää avaldanuq  kats esseekoko „Tsihiq ja kaehtusõq“ (1
 [[katõgooria:Eesti luulõtajaq]]
 [[katõgooria:Eesti poliitiguq]]
 [[katõgooria:Eesti inemiseq]]
+
+[[et:Gustav Suits]]
