--- a/Nike.mw
+++ b/Nike.mw
@@ -1,4 +1,6 @@
-Nike (vanakreeka keelen Νίκη, "võit“) olľ [[Vana-Kreeka]] siivolinõ võidojumalanna, nii lahengun ku rahumiilsen võitlusõn. Timä [[Rooma]] vastus olľ [[Victoria]]. Mütoloogia perrä olľ Nike [[titaan]] [[Pallas]]õ ja jumalanna [[Styx]]i tütär ja [[Zelus]]e (Rivaalitsõmisõ), [[Kratos]]õ (Kimmüse) ja [[Bia]] (Jovvu) sõsar. Mõnõ lätte perrä om Nike imä [[Oileis]], mitte Styx.<br />
+[[Pilt:Goddess Nike at Ephesus, Turkey.JPG|200px|thumb|right|Nike. Reljeef [[Ephesos]]õn]]
+
+'''Nike''' (vanakreeka keelen Νίκη, "võit“) olľ [[Vana-Kreeka]] siivolinõ võidojumalanna, nii lahengun ku rahumiilsen võitlusõn. Timä [[Rooma]] vastus olľ [[Victoria]]. Mütoloogia perrä olľ Nike [[titaan]] [[Pallas]]õ ja jumalanna [[Styx]]i tütär ja [[Zelus]]e (Rivaalitsõmisõ), [[Kratos]]õ (Kimmüse) ja [[Bia]] (Jovvu) sõsar. Mõnõ lätte perrä om Nike imä [[Oileis]], mitte Styx.<br />
 
 Ku pääjummal [[Zeus]] otsõ liitlaisi Titaanõ sõas vanõmbidõ jumaluisi vasta, tõi Styx umaq latsõq Zeusi teenistüste. Nike olľ syavankri juht ja kyik neli määräti jumala trooni vahis. Päält taa olõ-i Nikel umma mütoloogiat.<br />
 
