*Empty MediaWiki Message*

--- a/Hades.mw
+++ b/Hades.mw
@@ -1,6 +1,6 @@
-[[Pilt:Hades-et-Cerberus-III.jpg|200px|thumb|Hades [[Kerberosõga]] (Heraklioni Arkeoloogiamuusõum)]]
+[[Pilt:Hades-et-Cerberus-III.jpg|200px|thumb|Hades [[Kerberos]]õga (Heraklioni Arkeoloogiamuusõum)]]
 
-Hades (vanakreeka keelen Ἅιδης/ᾍδης) olľ [[Vana-Kreeka]] mütoloogian Allilma kuning ni surma ja kuulnuidõ jummal. Tiä vahtõ matussõriituisi ja kaitsõ kuulnuidõ õigust väärikäle matussõlõ. Hades olľ ka maa käkitüisi rikkuisi (vilälidse mulla, kulla, hõpõ ja tõisi metallõ) jummal. Tuuperäst teedäs tedä ku Ploutonit  (πλοῦτος om kreeka keelen rikkus) ni tuust tulõ timä [[Rooma]] vastus Pluto. <br />
+'''Hades''' (vanakreeka keelen Ἅιδης/ᾍδης) olľ [[Vana-Kreeka]] mütoloogian Allilma kuning ni surma ja kuulnuidõ jummal. Tiä vahtõ matussõriituisi ja kaitsõ kuulnuidõ õigust väärikäle matussõlõ. Hades olľ ka maa käkitüisi rikkuisi (vilälidse mulla, kulla, hõpõ ja tõisi metallõ) jummal. Tuuperäst teedäs tedä ku Ploutonit  (πλοῦτος om kreeka keelen rikkus) ni tuust tulõ timä [[Rooma]] vastus Pluto. <br />
 
 Hadese vanõmbaq olliq [[titaan]]iq [[Kronos]] ja [[Rhea]] ni tää olľ [[Poseidon]]i, [[Demeter]]i, [[Hera]], [[Hestia]], [[Zeus]]i ja [[Chiron]]i veli. Kronos lõbahť Hadese õkva päält sündümist üten nellä sõsara-velega alla, a ku sündü kuvvõs lats, Zeus, aviť Rhea umal pujal pästäq, andõn Kronosõlõ latsõ asõmõl rõiva sisse mähidü kivi. Ildampa sundõ Zeus Kronost tõisi latsi ka vällä sülgämä ni ütenkuun võitliq nääq titaanõ vasta. Müüdi perrä võidiq Zeus, Poseidon ja Hades päält kümmet aastakka lõpus titaanõ ja panniq nääq vangi [[Tartaros]]tõ. Zeusist sai taiva-, Poseidonist mere- ja Hadessest allilma valitsõja.<br />
 
