--- a/Kerberos.mw
+++ b/Kerberos.mw
@@ -1,4 +1,6 @@
-Kerberos (vanakreeka keelen Κέρβερος) olľ [[Vana-Kreeka]] mütoloogian mitmõ pääga põrgupini, kiä vahtsõ Allilma väräjät, et hoitaq kuulnuidõ vaimõ pagõmast. Tedä seletedäs inämbüste ku kolmõ pääga pinni sivvuhanna, sivvõst laka ja [[lõvi]] küüdsiga. Kuna tedä om ni antiik-kreeka ja antiik-rooma ku ka muudsan kirändüsen ja kunstin pall'o kujotõt, vari'iirüseq esiq autoridõ ettekujotusõn nii Kerberosõ vällänägemine ku tagaperä timä ümbre. Kõgõ suurõmb om lahkominek päie arvon: inämbüste kujotõdas tedä kolme pääga, vaihõl ka üte vai katõ vai esiki kooniq viiekümne pääga. Võimalik, et nii suurõ arvo puhul ommaq ka [[siug]]õ pääq sekkä rehkendedüq. <br />
+[[Pilt:RomanCerberus.JPG|200px|thumb|Kerberos. Detail skulptuurist, midä hoiõtas Heraklioni Arkeoloogiamuusõumin.]]
+
+'''Kerberos''' (vanakreeka keelen Κέρβερος) olľ [[Vana-Kreeka]] mütoloogian mitmõ pääga põrgupini, kiä vahtsõ Allilma väräjät, et hoitaq kuulnuidõ vaimõ pagõmast. Tedä seletedäs inämbüste ku kolmõ pääga pinni sivvuhanna, sivvõst laka ja [[lõvi]] küüdsiga. Kuna tedä om ni antiik-kreeka ja antiik-rooma ku ka muudsan kirändüsen ja kunstin pall'o kujotõt, vari'iirüseq esiq autoridõ ettekujotusõn nii Kerberosõ vällänägemine ku tagaperä timä ümbre. Kõgõ suurõmb om lahkominek päie arvon: inämbüste kujotõdas tedä kolme pääga, vaihõl ka üte vai katõ vai esiki kooniq viiekümne pääga. Võimalik, et nii suurõ arvo puhul ommaq ka [[siug]]õ pääq sekkä rehkendedüq. <br />
 
 Kerberosõ vanõmbaq olliq [[Echidna]], kiä olľ poolõlistõ naanõ ja poolõlistõ siug, ni [[Typhon]], saa maopääga tuld sülgäv hiiglanõ, kedäs esikiq [[Olümpos]]e jumalaq pelgsiq. Kerberosel olľ kolm veljä. Edimält [[Orthros]], kedä kujotõdi ku katõ pääga põrgupinni, tõõsõs [[Lerna hüdrä]], pall'odõ päiega jälehüs, kink hingüs häöť kyik elävä, ni viimäte [[Kimäär]], kiä olľ iistpuult lõvi, keskest [[kits]] ja takastpuult siug. <br />
 
